eventoas-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: eventoas
  name: eventoas
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eventoas
  template:
    metadata:
      labels:
        io.kompose.network/eventoapp-network: "true"
        io.kompose.service: eventoas
    spec:
      containers:
        - env:
            - name: EVENTOANGULAR_HOST
              value: http://172.18.0.5:4200
            - name: EVENTOAPP_HOST
              value: https://172.18.0.8:8443
            - name: EVENTO_CACHE_URI
              value: http://172.18.0.9:8585
            - name: EVENTO_WS_URI
              value: http://172.18.0.11:9090
            - name: VAULT_HOST
              value: 172.18.0.2
            - name: VAULT_ROOT_TOKEN
              valueFrom:
                secretKeyRef:
                  key: VAULT_ROOT_TOKEN
                  name: evento-as-secrets
          image: luizpovoa/eventoas:0.0.1-SNAPSHOT
          name: eventoas
          ports:
            - containerPort: 8081
      restartPolicy: Always
