eventobroker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: eventobroker
  name: eventobroker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eventobroker
  template:
    metadata:
      labels:
        io.kompose.network/eventoapp-network: "true"
        io.kompose.service: eventobroker
    spec:
      containers:
        - env:
            - name: EVENTO_APP_QUEUE
              value: eventoapp-integration-queue
            - name: EVENTO_WS_URI
              value: http://172.18.0.11:9090
            - name: RABBITMQ_HOST
              value: 172.18.0.3
            - name: RABBITMQ_PASSWORD
              value: segredo
            - name: RABBITMQ_PORT
              value: "5672"
            - name: RABBITMQ_USERNAME
              value: eventoapp
            - name: RESPONSE_EXCHANGE
              value: eventoapp.integration.exchange
          image: luizpovoa/eventocache:0.0.1-SNAPSHOT
          name: eventobroker
          ports:
            - containerPort: 8888
      restartPolicy: Always
