eventocache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: eventocache
  name: eventocache
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eventocache
  template:
    metadata:
      labels:
        io.kompose.network/eventoapp-network: "true"
        io.kompose.service: eventocache
    spec:
      containers:
        - env:
            - name: EVENTO_WS_URI
              value: http://172.18.0.11:9090
            - name: RABBITMQ_HOST
              value: 172.18.0.3
            - name: RABBITMQ_PASSWORD
              value: segredo
            - name: RABBITMQ_PORT
              value: "5672"
            - name: RABBITMQ_USERNAME
              value: eventoapp
            - name: REDIS_HOST
              value: redis-17294.c93.us-east-1-3.ec2.cloud.redislabs.com
            - name: REDIS_PASSWORD
              value: jTg6lvzKF0LTvbeTUUewJWaaVrgoWNZ8
            - name: REDIS_PORT
              value: "17294"
            - name: RESPONSE_EXCHANGE
              value: eventoapp.integration.exchange
            - name: RESPONSE_ROUTING_KEY
              value: routingKey_eventoapp
          image: luizpovoa/eventocache:0.0.1-SNAPSHOT
          name: eventocache
          ports:
            - containerPort: 8585
      restartPolicy: Always
