eventors-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: eventors
  name: eventors
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eventors
  template:
    metadata:
      labels:
        io.kompose.network/eventoapp-network: "true"
        io.kompose.service: eventors
    spec:
      containers:
        - env:
            - name: EVENTOAS_HOST
              value: https://172.18.0.6:8081
            - name: EVENTO_CACHE_URI
              value: http://172.18.0.9:8585
            - name: EVENTO_WS_URI
              value: http://172.18.0.11:9090
            - name: VAULT_HOST
              value: 172.18.0.2
            - name: VAULT_ROOT_TOKEN
              value: s.hBOgjdoVINT9E5KOPBu1OZUw
          image: luizpovoa/eventors:0.0.1-SNAPSHOT
          name: eventors
          ports:
            - containerPort: 8084
      restartPolicy: Always
