rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  template:
    metadata:
      labels:
        io.kompose.network/eventoapp-network: "true"
        io.kompose.service: rabbitmq
    spec:
      containers:
        - env:
            - name: INSERTION_QUEUE
              value: eventoapp-integration-queue
            - name: NUMBER_OF_VALIDATION_CONSUMERS
              value: "1"
            - name: RABBITMQ_HOST
              value: rabbitmq
            - name: RABBITMQ_PASSWORD
              value: guest
            - name: RABBITMQ_PORT
              value: "5672"
            - name: RABBITMQ_USERNAME
              value: guest
            - name: RESPONSE_EXCHANGE
              value: eventoapp.integration.exchange
            - name: RESPONSE_ROUTING_KEY
              value: routingKey_eventoapp
          image: rabbitmq:3-management
          name: rabbitmq
          ports:
            - containerPort: 5672
            - containerPort: 15672
      restartPolicy: Always
