vault-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\Java\Helm\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.network/eventoapp-network: "true"
    io.kompose.service: vault
  name: vault
spec:
  containers:
    - env:
        - name: VAULT_ADDR
          value: https://127.0.0.1:8200
        - name: VAULT_LOCAL_CONFIG
          value: '{"storage":[{"raft":{"path":"./vault/data","node_id":"node1"}}],"listener":[{"tcp":{"address":"127.0.0.1:8200","tls_disable":0,"tls_cert_file":"/data/vault-volume/certificate.pem","tls_key_file":"/data/vault-volume/key.pem"}}],"disable_mlock":true,"api_addr":"http://127.0.0.1:8200","cluster_addr":"https://127.0.0.1:8201","ui":true,"default_lease_ttl":"168h","max_lease_ttl":"720h"}'
        - name: VAULT_TOKEN
          value: s.hBOgjdoVINT9E5KOPBu1OZUw
      image: vault:latest
      name: vault
      ports:
        - containerPort: 8200
      resources: {}
      securityContext:
        capabilities:
          add:
            - IPC_LOCK
      volumeMounts:
        - mountPath: /data
          name: vault-volume
  restartPolicy: OnFailure
  volumes:
    - name: vault-volume
      persistentVolumeClaim:
        claimName: vault-volume
status: {}
