eventoangular-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: eventoangular
  name: eventoangular
spec:
  type: LoadBalancer
  ports:
    - name: "4200"
      port: 4200
      targetPort: 80
  selector:
    io.kompose.service: eventoangular
