eventoapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: eventoapp
  name: eventoapp
spec:
  type: LoadBalancer
  ports:
    - name: "8443"
      port: 8443
      targetPort: 8443
  selector:
    io.kompose.service: eventoapp
