eventoas-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: eventoas
  name: eventoas
spec:
  type: LoadBalancer
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: eventoas
