eventocache-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: eventocache
  name: eventocache
spec:
  type: LoadBalancer
  ports:
    - name: "8585"
      port: 8585
      targetPort: 8585
  selector:
    io.kompose.service: eventocache
