eventors-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: eventors
  name: eventors
spec:
  type: LoadBalancer
  ports:
    - name: "8084"
      port: 8084
      targetPort: 8084
  selector:
    io.kompose.service: eventors
